--- a/package.json
+++ b/package.json
@@ -15,19 +15,20 @@
     "build": "electron-builder build"
   },
   "devDependencies": {
-    "babylonjs": "^5.12.1",
-    "electron": "^19.0.6",
-    "electron-builder": "^23.1.0",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "babylonjs": "^6.4.1",
+    "electron": "^24.3.1",
+    "electron-builder": "^24.4.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1"
   },
   "build": {
     "appId": "electron-babylon-typescript-template",
     "linux": {
       "target": [
-        "deb", "AppImage"
+        "deb",
+        "AppImage"
       ]
     },
     "win": {
